--- a/src/components/Home/styles.css
+++ b/src/components/Home/styles.css
@@ -52,3 +52,9 @@
 		text-shadow: 1px -1px 0 #767676, -1px 2px 1px #737272, -2px 4px 1px #767474;
 	}
 }
+
+@media screen and (max-width: 486px) {
+	.homeMobileTitle {
+		margin-top: 40%;
+	}
+}
